tests/cases/fail/match_char_case_requires_literal.p4
def main() -> None:
    needle = 'x'
    value = 'x'

    match value:
        case needle:
            print("hit")
        case _:
            print("miss")
